metodo añadir camino activo + corregido formulario validación camino
