# api.yml
@@ -61,13 +61,13 @@ paths:
                     description: User password
                     example: "Password1"
                 example: {'id': '1','name': 'Irene','surname': 'Sánchez', 'email': 'irene@gmail.com', 'password': 'Password1'}
-        "401":
+        "400":
           description: "Invalid input"
           content:
             application/json:
               schema:
                 type: string
-                example: {"message":"password not valid"}
+                example: {"message":"Incorrect data recived"}
         "422":
           description: "Invalid input"
           content:
@@ -112,6 +112,13 @@ paths:
                     description: personal token
                     example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
                 example: {'message': 'success','token': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c'}
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"Incorrect data recived"}
         "401":
           description: "Unauthorized"
           content:
@@ -255,7 +262,7 @@ paths:
       - "logros"
       summary: "Adds user achivement by id"      
       parameters:
-        - name: id_logro
+        - name: achievement
           in: query
           required: true
           schema:
@@ -273,13 +280,20 @@ paths:
               schema:
                 type: string
                 example: {"message":"success"}
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"Incorrect data recived"}
   /pri/deleteAchievement:
     delete:
       tags:
       - "logros"
       summary: "Deletes user achivement by id"      
       parameters:
-        - name: id_logro
+        - name: achievement
           in: query
           required: true
           schema:
@@ -416,6 +430,52 @@ paths:
         "finish": "Puente de la Reina"
     }
 ]
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"Incorrect data recived"}
+  /pri/addActivePath:
+    post:
+      tags:
+      - "camino"
+      summary: "If there isn't an active path it adds the one given to the DB"     
+      parameters:
+        - name: camino
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: start_date
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: "Active path added"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"success"}
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"Incorrect data recived"}
+
+        "422":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                type: string
+                example: {"message":"User already has an active path"}
 
   /pri/csv_download:
     get:
