# src/Form/UserPathType.php
@@ -4,6 +4,7 @@ namespace App\Form;
 use Symfony\Component\Form\AbstractType;
 use Symfony\Component\Form\FormBuilderInterface;
 use Symfony\Bridge\Doctrine\Form\Type\EntityType;
+use Symfony\Component\Form\Extension\Core\Type\TextType;
 use Symfony\Component\OptionsResolver\OptionsResolverInterface;
 use Symfony\Component\Validator\Constraints\NotBlank;
 use App\Entity\Camino;
@@ -15,8 +16,8 @@ class UserPathType extends AbstractType
     {
         $builder
             ->add('camino', EntityType::class, [
-                'class' => Camino::class, 'constraints' => [new NotBlank()]])  
-        ;
+                'class' => Camino::class, 'constraints' => [new NotBlank()]])
+            ->add('start_date', TextType::class);
     }
     public function setDefaultOptions(OptionsResolverInterface $resolver){
         $resolver->setDefaults(
